# tiralabra

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
documentation/: implementation_document.md  specification_document.md  testing_document.md  user_manual.md
documentation/weekly_report/: weekly_report_1.md
documentation/weekly_reports/: weekly_report_2.md  weekly_report_3.md  weekly_report_4.md  weekly_report_5.md  weekly_report_6.md
src/: converter.py  generator.py  lilypond.py  main.py  music_path.py  run.py  trie.py  trie_node.py
src/music/: autumn_mountain.txt  botw.txt  lilypond.ly  reference.txt  test_piece.txt  wii_theme.txt
src/tests/: converter_test.py  generator_test.py  lilypond_test.py  run_test.py  trie_node_test.py  trie_test.py
