[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Sohvi Puska <sohvip1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
pylint = "^2.16.1"
coverage = "^7.1.0"
autopep8 = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
